added first image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="Header">
+    <img src="images/logo.jpg" alt="mustachio"><br>
+    <a href=""><strong>HOME</strong></a>
+    <a href=""><strong>ABOUT</strong></a>
+    <a href=""><strong>GALLERY</strong></a>
+    <a href=""><strong>BLOG</strong></a>
+    <a href=""><strong>CONTACT</strong></a>
+    </div>
     
+    <div class="Image1">
+        
+    </div>
+
 </body>
 </html>
