gallery images added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     </div>
     
     <div class="Image1">
-        
+        <h3>THE BEACON TO ALL MANKIND</h3>
+        <p id="Our">Our websites are created with</p>
+        <p id="inspiration">inspiration, checked for quality and originality</p>
+        <p id="and">and meticulously sliced and coded.</p>
+        <p id="ReadMore">READ MORE</p>
     </div>
 
 </body>
