completed home page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
         <p id="and">and meticulously sliced and coded.</p>
         <p id="ReadMore">READ MORE</p>
     </div>
-
+    <div class="FAN">
+    <p id="the-father"><img src="images/the-father.jpg" alt=""></p>
+    <p id="the-actor"><img src="images/the-actor.jpg" alt=""></p>
+    <p id="the-nerd"><img src="images/the-nerd.jpg" alt=""></p>
+    <p id="father-label">The Father</p>
+    <p id="actor-label">The Actor</p>\
+    <p id="nerd-label">The Nerd</p>
+    </div>
+    <div class="footer">
+        <a id="twitter" href="https://x.com/"><img src="images/icons/icon-twitter.jpg" alt=""></a>
+        <a id="facebook" href="https://www.facebook.com/"><img src="images/icons/icon-facebook.jpg" alt=""></a>
+        <a id="google+" href="https://en.wikipedia.org/wiki/Google%2B"><img src="images/icons/icon-googleplus-hover.jpg" alt=""></a>
+        <a id="pinterest" href="https://www.pinterest.com/"><img src="images/icons/icon-pinterest.jpg" alt=""></a>
+        
+    </div>
 </body>
 </html>
