--- a/gallery.html
+++ b/gallery.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>
-        <img src="images/mustache1.jpg" alt="">
-        <img src="images/mustache2.jpg" alt="">
-        <img src="images/mustache3.jpg" alt="">
+    <div class="Header">
+    <img src="images/logo.jpg" alt="mustachio"><br>
+    <a href=""><strong>HOME</strong></a>
+    <a href=""><strong>ABOUT</strong></a>
+    <a href="gallery.html"><strong>GALLERY</strong></a>
+    <a href=""><strong>BLOG</strong></a>
+    <a href="contact.html"><strong>CONTACT</strong></a>
+    </div>
+    <div id="gallery">
+    <p id="toprow">
+        <img id="one"src="images/mustache1.jpg" alt="">
+        <img id="two"src="images/mustache2.jpg" alt="">
+        <img id="three"src="images/mustache3.jpg" alt="">
     </p>
-    <p>
-        <img src="images/mustache4.jpg" alt="">
-        <img src="images/mustache5.jpg" alt="">
-        <img src="images/mustache6.jpg" alt="">
+    <p id="middlerow">
+        <img id="four"src="images/mustache4.jpg" alt="">
+        <img id="five"src="images/mustache5.jpg" alt="">
+        <img id="six"src="images/mustache6.jpg" alt="">
     </p>
-    <p>
-        <img src="images/mustache7.jpg" alt="">
-        <img src="images/mustache8.jpg" alt="">
-        <img src="images/mustache9.jpg" alt="">
+    <p id="bottomrow">
+        <img id="seven" src="images/mustache7.jpg" alt="">
+        <img id="eight" src="images/mustache8.jpg" alt="">
+        <img id="nine" src="images/mustache9.jpg" alt="">
     </p>
+    </div>
+     <div class="footer">
+        <a id="twitter" href="https://x.com/"><img src="images/icons/icon-twitter.jpg" alt=""></a>
+        <a id="facebook" href="https://www.facebook.com/"><img src="images/icons/icon-facebook.jpg" alt=""></a>
+        <a id="google+" href="https://en.wikipedia.org/wiki/Google%2B"><img src="images/icons/icon-googleplus-hover.jpg" alt=""></a>
+        <a id="pinterest" href="https://www.pinterest.com/"><img src="images/icons/icon-pinterest.jpg" alt=""></a>
+        <p>2023 by Mustachio. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
