--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <img src="images/logo.jpg" alt="mustachio"><br>
     <a href=""><strong>HOME</strong></a>
     <a href=""><strong>ABOUT</strong></a>
-    <a href=""><strong>GALLERY</strong></a>
+    <a href="gallery.html"><strong>GALLERY</strong></a>
     <a href=""><strong>BLOG</strong></a>
-    <a href=""><strong>CONTACT</strong></a>
+    <a href="contact.html"><strong>CONTACT</strong></a>
     </div>
     
     <div class="Image1">
@@ -36,7 +36,7 @@
         <a id="facebook" href="https://www.facebook.com/"><img src="images/icons/icon-facebook.jpg" alt=""></a>
         <a id="google+" href="https://en.wikipedia.org/wiki/Google%2B"><img src="images/icons/icon-googleplus-hover.jpg" alt=""></a>
         <a id="pinterest" href="https://www.pinterest.com/"><img src="images/icons/icon-pinterest.jpg" alt=""></a>
-        
+        <p>2023 by Mustachio. All Rights Reserved.</p>
     </div>
 </body>
 </html>
