--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 <body>
     <div class="Header">
     <img src="images/logo.jpg" alt="mustachio"><br>
-    <a href=""><strong>HOME</strong></a>
+    <a href="index.html"><strong>HOME</strong></a>
     <a href=""><strong>ABOUT</strong></a>
     <a href="gallery.html"><strong>GALLERY</strong></a>
     <a href=""><strong>BLOG</strong></a>
